[docs]update readme